src/ui/snapshots/gust__ui__footer__tests__footer_error.snap
---
source: src/ui/footer.rs
expression: output
---
┌ Status ──────────────────────────────────────────────────────────────────────┐
│Press '/' to search, 'q' to quit                                              │
│                                                                              │
│Network error: connection refused                                             │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
