src/ui/snapshots/gust__ui__footer__tests__footer_loading.snap
---
source: src/ui/footer.rs
expression: output
---
┌ Status ──────────────────────────────────────────────────────────────────────┐
│Press '/' to search, 'q' to quit                                              │
│                                                                              │
│Loading...                                                                    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
