src/ui/snapshots/gust__ui__footer__tests__footer_normal_mode.snap
---
source: src/ui/footer.rs
expression: output
---
┌ Status ──────────────────────────────────────────────────────────────────────┐
│Press '/' to search, 'q' to quit                                              │
│                                                                              │
│Updated: Never | q:quit r:refresh /:search                                    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
