src/ui/snapshots/gust__ui__footer__tests__footer_search_mode.snap
---
source: src/ui/footer.rs
expression: output
---
┌ Status ──────────────────────────────────────────────────────────────────────┐
│> New York_                                                                   │
│                                                                              │
│Updated: Never | q:quit r:refresh /:search                                    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
